sizing, spacing, padding fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -188,3 +188,9 @@ body {
     }
   }
 }
+.diamond-shape {
+  width: 130px;
+  .image-wrap:first-of-kind {
+    padding: 0;
+  }
+}
